# rp-benchmark

./: .gitignore  README.md  aggregate_flaw_hunter.py  analyze_adversarial.py  analyze_adversarial_elo.py  analyze_arena_timeseries.py  analyze_bayesian_arena_elo.py  analyze_bayesian_elo.py  analyze_behavioral_metrics.py  analyze_combined.py  analyze_community_arena.py  analyze_cost_efficiency.py  analyze_elo.py  analyze_factor_and_clusters.py  analyze_failure_target_validation.py  analyze_flaw_hunter_sessions.py  analyze_latency.py  analyze_method_correlations.py  analyze_model_profiles.py  analyze_pairwise_elo.py  analyze_quality_speed.py  analyze_relative.py  analyze_seed_discrimination.py  analyze_swipe_quality.py  analyze_voter_quality.py  blog_post_rp_benchmark.md  generate_profile_cards.py  judge_adversarial_pairwise.py  judge_adversarial_swap.py  judge_per_turn_failures.py  judge_session_flaw_hunter.py  learn_rubric_classifier.py  learn_rubric_from_data.py  pyproject.toml  run.py  validate_comparative.py  validate_flaw_hunter.py  validate_rubric.py  validate_seeds.py
analysis/: scoring_rubric_v2.json  scoring_rubric_v2.md
docs/: EXPERIMENT_DESIGN.md  METHODOLOGY.md
harness/: __init__.py  aggregate.py  api.py  cli.py  config.py  multiturn.py  objective_metrics.py  runner.py  slop_detectors.py  visualize.py
hf_dataset/: README.md  export.py
hf_space/: README.md  app.py  requirements.txt
prompts/: format_payload.py  judge_claude.md  judge_comparative.md  judge_flaw_hunter.md  judge_gpt.md
results/: adversarial_elo.json  adversarial_pairwise_raw.jsonl  adversarial_pairwise_raw_swapped.jsonl  bayesian_elo.json  behavioral_metrics.json  combined_leaderboard.json  community_arena_1000.json  community_arena_1600.json  community_arena_2000.json  comparative_validation.json  (+34 more)
(+51 files in other folders)
